[tool.poetry]
name = "crypto-notifier"
version = "0.1.0"
description = ""
authors = ["wudaon <wudaown@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
